<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createTopicLabel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1976D2"
    android:scrollIndicators="end"
    android:visibility="visible"
    tools:context=".Publisher">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/Subscriber"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/topicListLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/topics"
        android:textColor="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/welcomeTextView"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topicListLabel" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/createTopic"
        android:textColor="#F6F6F6"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/topicListLabel"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <EditText
        android:id="@+id/editTextTopicName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/topicHint"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/createTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shapes"
        android:text="@string/create"
        android:visibility="visible"
        app:iconTint="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTopicName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTopicName"
        app:layout_constraintTop_toTopOf="@+id/editTextTopicName" />

    <TextView
        android:id="@+id/subscribedTopicsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/topicsSelected"
        android:textColor="#E6E6E6"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/editTextTopicName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTopicName" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/topicList"
        android:textStyle="italic"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/subscribedTopicsLabel"
        app:layout_constraintTop_toBottomOf="@+id/subscribedTopicsLabel" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/shapes"
        android:text="@string/disconnect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/shapes"
        android:text="@string/Done"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:background="#26A69A"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/topicListLabel"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shapes"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/subscribedTopicsLabel"
        app:layout_constraintStart_toStartOf="@+id/subscribedTopicsLabel"
        app:layout_constraintTop_toBottomOf="@+id/subscribedTopicsLabel" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView3"
        app:layout_constraintStart_toStartOf="@+id/recyclerView3" />

</androidx.constraintlayout.widget.ConstraintLayout>